--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bip39": "^3.1.0",
     "dotenv": "^16.3.1",
     "nostr-tools": "^2.1.2",
-    "nostr-wasm": "^0.1.0",
+    "nostr-wasm-ng": "^0.1.0",
     "web3": "^4.3.0",
     "winston": "^3.11.0",
     "ws": "^8.16.0"
